--- a/1회차/1일차/SHFE_202412_1_1.ipynb
+++ b/1회차/1일차/SHFE_202412_1_1.ipynb
@@ -125,7 +125,12 @@
    }
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T01:34:15.503160Z",
+     "start_time": "2024-12-16T01:34:15.486843Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
@@ -134,21 +139,413 @@
     "# df.income\n",
     "# df[\"income\"]\n",
     "df[[\"income\"]]\n",
+    "df[[\"income\", \"age\"]]\n",
     "# print(df.head())"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "           income        age\n",
+       "0     66155.92510  59.017015\n",
+       "1     34415.15397  48.117153\n",
+       "2     57317.17006  63.108049\n",
+       "3     42709.53420  45.751972\n",
+       "4     66952.68885  18.584336\n",
+       "...           ...        ...\n",
+       "1995  59221.04487  48.518179\n",
+       "1996  69516.12757  23.162104\n",
+       "1997  44311.44926  28.017167\n",
+       "1998  43756.05660  63.971796\n",
+       "1999  69436.57955  56.152617\n",
+       "\n",
+       "[2000 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>income</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>66155.92510</td>\n",
+       "      <td>59.017015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>34415.15397</td>\n",
+       "      <td>48.117153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57317.17006</td>\n",
+       "      <td>63.108049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>42709.53420</td>\n",
+       "      <td>45.751972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66952.68885</td>\n",
+       "      <td>18.584336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995</th>\n",
+       "      <td>59221.04487</td>\n",
+       "      <td>48.518179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>69516.12757</td>\n",
+       "      <td>23.162104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997</th>\n",
+       "      <td>44311.44926</td>\n",
+       "      <td>28.017167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>43756.05660</td>\n",
+       "      <td>63.971796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>69436.57955</td>\n",
+       "      <td>56.152617</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2000 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T01:33:37.549567Z",
+     "start_time": "2024-12-16T01:33:37.525322Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = 3\n",
+    "b = 4\n",
+    "c = [3, 4]  # 리스트\n",
+    "c = [\"income\", \"age\", 3, 4]\n",
+    "print(c)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['income', 'age', 3, 4]\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T01:44:46.155412Z",
+     "start_time": "2024-12-16T01:44:46.133163Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# adv.csv 파일을 읽거, TV, radio컬럼을 선택해보기\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"adv.csv\", index_col=0,)\n",
+    "\n",
+    "df2 = df[[\"TV\", \"radio\"]]\n",
+    "df2.head(5) #.head(), .tail(), .sample()\n",
+    "# df.info()\n",
+    "df.describe()\n",
+    "df.mean()"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TV           147.0425\n",
+       "radio         23.2640\n",
+       "newspaper     30.5540\n",
+       "sales         14.0225\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T01:54:37.142745Z",
+     "start_time": "2024-12-16T01:54:37.115233Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df.iloc[0:2, 1:3]\n",
+    "# df에서 10~15행, 2~4열 선택\n",
+    "df.iloc[9:15, 1:4]"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    radio  newspaper  sales\n",
+       "10    2.6       21.2   10.6\n",
+       "11    5.8       24.2    8.6\n",
+       "12   24.0        4.0   17.4\n",
+       "13   35.1       65.9    9.2\n",
+       "14    7.6        7.2    9.7\n",
+       "15   32.9       46.0   19.0"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>radio</th>\n",
+       "      <th>newspaper</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2.6</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>10.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>24.2</td>\n",
+       "      <td>8.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>35.1</td>\n",
+       "      <td>65.9</td>\n",
+       "      <td>9.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>7.6</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>9.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>32.9</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "df.query(\n",
+    "    \"sales > 10 & TV > 100\"\n",
+    ")\n",
+    "df.query(\n",
+    "    \"sales > 10 | TV > 100\"\n",
+    ")"
    ],
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T02:04:38.677417Z",
+     "start_time": "2024-12-16T02:04:38.658557Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# creditset2.csv를 credit라는 이름으로 데이터 프레임\n",
+    "# default10yr가 1인 행들을 출력\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"creditset2.csv\")\n",
+    "df.query(\"default10yr == 1\")\n",
+    "df.default10yr.unique()\n",
+    "df.default10yr.value_counts()"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "default10yr\n",
+       "0    1717\n",
+       "1     283\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
+  },
+  {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "a = 3\n",
-    "b = 4\n",
-    "c = [3, 4]  # 리스트"
-   ]
+    "#sp500_tm.csv를 읽고 Direction이 1인 행들을 선택 후, 다른 3개 컬럼의 평균을 구하기\n",
+    "import pandas as pd\n",
+    "sp500 = pd.read_csv(\"sp500_tm.csv\")\n",
+    "sp500_2 = sp500.query(\"Direction == 1\")\n",
+    "sp500_2[[\"avgNeg\", \"avgPos\", \"avgTerms\"]].mean()\n",
+    "sp500_2.drop(\"Direction\", axis=1)   #컬럼지우개 inplace=True는 영구적 반영\\\n",
+    "sp500_2.drop([\"Direction\", \"avgPos\"], axis=1, inplace=True)\n",
+    "sp500_2\n",
+    "\n",
+    "#sp500에서 Direction을 제외한 3개변수를 선택해서 X라는 이름, drop\n",
+    "#Direction만 선택해서 y라는 이름으로...\n",
+    "X = sp500.drop(\"Direction\", axis=1)\n",
+    "y= sp500[\"Direction\"]"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T02:19:54.543677Z",
+     "start_time": "2024-12-16T02:19:54.530251Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sp500.groupby(\"Direction\")[\"avgPos\"].mean()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Direction\n",
+       "0    117.433962\n",
+       "1    132.638298\n",
+       "Name: avgPos, dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 48
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 데이터 로드\n",
+    "weather = pd.read_csv(\"weatherAUS.csv\")\n",
+    "\n",
+    "# NaN 값의 비율 확인\n",
+    "print(weather.isnull().mean())\n",
+    "\n",
+    "# NaN 값 제거\n",
+    "weather_cleaned = weather.dropna()\n",
+    "\n",
+    "# 데이터의 숫자형과 범주형 열 분리\n",
+    "weather_numeric = weather.select_dtypes(include=np.number)\n",
+    "weather_categorical = weather.select_dtypes(exclude=np.number)\n",
+    "\n",
+    "# 숫자형 데이터의 NaN을 0으로 채우기\n",
+    "weather_numeric_filled = weather_numeric.fillna(0)\n",
+    "\n",
+    "# 범주형 데이터 RainToday 열을 Label Encoding\n",
+    "weather_categorical['RainToday'] = weather_categorical['RainToday'].replace([\"No\", \"Yes\"], [0, 1])\n",
+    "\n",
+    "# WindDir9am의 고유값 확인\n",
+    "print(weather_categorical['WindDir9am'].unique())\n",
+    "\n",
+    "# WindDir9am 열을 Label Encoding\n",
+    "weather_categorical['WindDir9am'] = weather_categorical['WindDir9am'].astype('category').cat.codes\n",
+    "\n",
+    "# 결과 확인\n",
+    "print(weather_categorical.head())"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -180,7 +577,7 @@
    ],
    "execution_count": null,
    "source": [
-    "import numpy as np\n",
+    " import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "#시리즈로 만들기\n",
